# texxt2json

./: .gitignore  Cargo.toml  README.md  index.html
data/: test_cases.json  test_cases_large.json
demo/: index.html
docs/: implementation_plan.md  requirements.md  task.md  walkthrough.md
pkg/: package.json  structured_json_pipeline.d.ts  structured_json_pipeline.js  structured_json_pipeline_bg.wasm  structured_json_pipeline_bg.wasm.d.ts
src/: lib.rs  schema.rs
src/layers/: flan.rs  gliner.rs  mod.rs  qwen.rs
