[package]
name = "structured_json_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization & Processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# ONNX Runtime for Layer 1 & 2 (Using System or Downloaded binaries)
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.16.1"

# Tokenization utilities
tokenizers = "0.15"
gline-rs = "1"
orp = "0.9.2"
regex = "1.11"

# Local LLM Engine for Layer 3 (Pin to llama.cpp bindings, enable sampler)
llama-cpp-2 = { version = "0.1.11", features = ["sampler"] }
encoding_rs = "0.8"

# Multi-threading utilities
num_cpus = "1.16"
