[package]
name = "structured_json_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization & Processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.11"

# ONNX Runtime for Layer 1 & 2 (Using System or Downloaded binaries)
ort = { version = "2.0.0-rc.9", features = ["ndarray"], optional = true }
ndarray = "0.16.1"

# Tokenization utilities
tokenizers = { version = "0.15", optional = true }
gline-rs = { version = "1", optional = true }
orp = { version = "0.9.2", optional = true }

# Local LLM Engine for Layer 3 (Pin to llama.cpp bindings, enable sampler)
llama-cpp-2 = { version = "0.1.11", features = ["sampler"], optional = true }
encoding_rs = "0.8"

# Multi-threading utilities
num_cpus = { version = "1.16", optional = true }

# WebAssembly bindings
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:ort",
    "dep:tokenizers",
    "dep:gline-rs",
    "dep:orp",
    "dep:llama-cpp-2",
    "dep:num_cpus"
]
wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen"
]

[[bin]]
name = "main"
required-features = ["native"]

[[bin]]
name = "eval"
required-features = ["native"]

[[bin]]
name = "test_flan"
required-features = ["native"]

[[bin]]
name = "test_gbnf"
required-features = ["native"]

[[bin]]
name = "test_gliner"
required-features = ["native"]
